--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
                 <div class="container-btn-projects-cards">
                 <!--<a href="sylvassur.html">-->
-                        <button class="projects-buttons-left" style="filter: grayscale(1);">
-                            &Agrave; venir...
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
                         </button>
                 <!--</a>-->
                     <a href="http://www.sylvassur.com/" target="_blank">
