--- a/jimmz.html
+++ b/jimmz.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-GFA.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/commons.css">
+    <link rel="stylesheet" href="data/css/style-jimmz.css">
     <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
@@ -82,4 +83,106 @@
             </tr>
         </table>
     </div>
+    <div class="background-white">
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Le projet Jimmz (de a à z)
+            </h2>
+        </div>
+        <div class="text-corp">
+            Le projet passionnant et de grande envergure s’est étalé sur une période de six mois, 
+            nécessitant une collaboration étroite au sein d’un groupe de quatre personnes, 
+            chacune apportant une expertise spécifique à la table. 
+            Notre équipe était diversifiée, comprenant un spécialiste de l’événementiel, 
+            un expert des réseaux sociaux et deux gestionnaires de l’expérience utilisateur (UX), parmi lesquels je me compte.
+            Cette diversité a enrichi notre approche et nous a permis de nous concentrer efficacement sur différentes facettes du projet.
+            Pour ma part, j’ai pris en charge la conception de notre identité visuelle, un aspect crucial pour garantir la cohérence et la reconnaissance de notre marque.
+            <br/><br/>
+            Dans une phase ultérieure, en collaboration avec ma partenaire d’UX, 
+            nous avons donné vie à notre vision en développant un site web «vitrine» à la fois pour les navigateurs web et les appareils mobiles. 
+            Cette plateforme devait refléter notre identité de marque tout en offrant une expérience utilisateur fluide et engageante, 
+            ce qui a nécessité une attention méticuleuse aux détails et une compréhension approfondie des besoins de nos utilisateurs cibles.
+        </div>
+        <div class="flex">
+            <img class="quarante" src="data/imgs/jimmz/logo.png" alt="logo de jimmz">
+        </div>
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Le projet expliqué en 2 pages... avec sa da
+            </h2>
+        </div>
+    </div>
+        <div class="flex">
+            <img class="quatre-vingt-dix" src="data/imgs/jimmz/da.jpg" alt="direction artistique de jimmz">
+        </div>
+    <div class="background-white">
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Conception de logo & moodboard
+            </h2>
+        </div>
+        <div class="text-corp">
+            Nous envisagions un logo noir, mais comment notre client pourrait-il nous reconnaître avec un logo noir… classique… compliqué pour lui ?
+            <br/><br/>
+            C’est ainsi que nous avons entamé nos recherches, et un style en particulier s’est démarqué : le style Bauhaus.
+            <br/><br/>
+            Pour ceux qui découvrent :<br/>
+            Le mouvement Bauhaus, ou la construction sous un nouvel angle. Il abolit les divisions entre les disciplines artistiques, artisanales, architecturales et industrielles ; prône un esthétisme pur et simple ; favorise un minimalisme prononcé et un retour à l’essentiel.
+            <br/><br/>
+            Un style minimaliste qui nous ressemble, avec la simplicité des couleurs primaires qui se démarque. Aussi simple que notre concept finalement. It’s a match.
+        </div>
+        <div class="flex">
+            <img class="cinquante" src="data/imgs/jimmz/moodboard.jpg" alt="moodboard de jimmz">
+        </div>
+        <div class="text-corp">
+            Tous ces éléments ont fait que nous sommes passé d’un logo noir, puis à plus de couleur avant d’arriver au choix final du JIMMZ coloré que l’on connait aujourd’hui.
+        </div>
+        <div class="flex">
+            <img class="quatre-vingt" src="data/imgs/jimmz/transfo-logo.jpg" alt="transformation du logo de jimmz">
+        </div>
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Conception de site web & moodboard
+            </h2>
+        </div>
+        <div class="text-corp">
+            Pour le site, nous partons déjà avec un avantage, nous avons nos couleurs et notre identité... Il ne manque plus qu’à trouver... tout le reste.
+            Pour ce faire, nous nous tournons vers nos amis Pinterest, Behance ou encore Dribbble et nous observons ce qui se fait aujourd’hui et ce qui correspond à notre vision.
+            <br/><br/>
+            Après quelques recherches, nous savons ce que nous voulons : quelque chose de percutant, qui attire l’attention.
+            À noter également que ce site est essentiellement une vitrine ; nous communiquerons et échangerons principalement avec nos utilisateurs via les réseaux sociaux.
+        </div>
+        <div class="flex">
+            <img class="cinquante" src="data/imgs/jimmz/moodboard.jpg" alt="moodboard de jimmz">
+        </div>
+
+        <div class="box-h2">
+            <h2 class="titre_rose">
+                Le résultat...
+            </h2>
+        </div>
+
+        <table>
+            <tr>
+                <th>
+                    <img src="data/imgs/jimmz/result-ordi.jpg" alt="Résultat du site sur ordinateur">
+                </th>
+                <th>
+                    <img src="data/imgs/jimmz/result-mobile.jpg" alt="Résultat du site sur mobile">
+                </th>
+            </tr>
+        </table>
+    </div>
+
+    <footer>
+        <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
+        <p class="p-footer">@mthillayisnard
+            <script>document.write(new Date().getFullYear())</script>
+        </p>
+        <a href="https://www.behance.net/mthillayisnard"><img src="data/imgs/all/logo-behance.png" class="img-footer"></a>
+        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
+    </footer>
 </body>
