--- a/l'acoste.html
+++ b/l'acoste.html
@@ -8,8 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="data/imgs/all/MTI.png" type="image/x-icon">
-    <link rel="stylesheet" href="data/css/style-L'ACOSTE.css">
     <link rel="stylesheet" href="data/css/nav.css">
+    <link rel="stylesheet" href="data/css/commons.css">
+    <link rel="stylesheet" href="data/css/style-L'ACOSTE.css">
     <link rel="stylesheet" href="data/css/footer.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
