--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
                 <h3 class="project-title">Jimmz</h3>
                 <p class="project-subtitle">Création Web & vidéos tutos</p>
                 <div class="container-btn-projects-cards">
-                <!--<a href="sylvassur.html">-->
-                        <button class="projects-buttons-left">
-                            D&eacute;couvrir le projet
-                        </button>
-                <!--</a>-->
+                <a href="jimmz.html">
+                    <button class="projects-buttons-left">
+                        D&eacute;couvrir le projet
+                    </button>
+                </a>
                     <a href="http://www.sylvassur.com/" target="_blank">
                         <button class="projects-buttons-right">
                             Site Web
