--- a/jimmz.html
+++ b/jimmz.html
@@ -164,17 +164,11 @@
             </h2>
         </div>
 
-        <table>
-            <tr>
-                <th>
-                    <img src="data/imgs/jimmz/result-ordi.jpg" alt="Résultat du site sur ordinateur">
-                </th>
-                <th>
-                    <img src="data/imgs/jimmz/result-mobile.jpg" alt="Résultat du site sur mobile">
-                </th>
-            </tr>
-        </table>
     </div>
+        <div class="result-container">
+            <img src="data/imgs/jimmz/result-ordi.jpg" alt="Résultat du site sur ordinateur" class="result-container_img1">
+            <img src="data/imgs/jimmz/result-mobile.jpg" alt="Résultat du site sur mobile" class="result-container_img2">
+        </div>
 
     <footer>
         <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
