--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="hero-footer">
-            <a href="cv/CV - Manon THILLAY-ISNARD.pdf"><button class="btn-cv">Mon CV</button></a>
+            <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv">Mon CV</button></a>
             <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"></button></a>
             <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"></button></a>
         </div>
