--- a/m/index.html
+++ b/m/index.html
@@ -26,7 +26,7 @@
                     <input class="checkbox" type="checkbox" name="nav_checkbox" id="nav-checkbox" />
                     <div class="logo">
                         <div class="showed-links-nav">
-                            <a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf">
+                            <a href="../cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank">
                                 <button class="btn-cv">
                                     Mon CV
                                 </button>
@@ -237,7 +237,7 @@
         </div>
     </div>
     <footer>
-        <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
+        <a href="../cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
         <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
         <p class="p-footer">@mthillayisnard
             <script>document.write(new Date().getFullYear())</script>
