--- a/m/index.html
+++ b/m/index.html
@@ -44,9 +44,7 @@
                         </div>
                     </div>
                     <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
+                        <p class="menu-txt">menu</p>
                     </div>
                     <div class="menu-items">
                         <ul>
