--- a/m/contact.html
+++ b/m/contact.html
@@ -20,28 +20,54 @@
     <div class="fjaune">
       <nav>
         <div class="navbar">
-          <div class="container nav-container">
-              <input class="checkbox" type="checkbox" name="" id="" />
-            <div class="logo">
-              <img src="../data/imgs/all/MTI.png" alt="Logo">
+            <div class="container nav-container">
+                <input class="checkbox" type="checkbox" name="nav_checkbox" id="nav-checkbox" />
+                <div class="logo">
+                    <div class="showed-links-nav">
+                        <a href="../cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank">
+                            <button class="btn-cv">
+                                Mon CV
+                            </button>
+                        </a>
+                        <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" aria-label="Lien vers la page Linkedin">
+                            <button class="btn-linkedin">
+                                <!--<img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc">-->
+                            </button>
+                        </a>
+                        <a href="https://www.behance.net/mthillayisnard" aria-label="Lien vers la page Behance">
+                            <button class="btn-behance">
+                                <!--<img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn">-->
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <div class="hamburger-lines">
+                    <p class="menu-txt">menu</p>
+                </div>
+                <div class="menu-items">
+                    <ul>
+
+                        <li>
+                            <a href="index.html">
+                                Accueil
+                            </a>
+                        </li>
+                        <li>
+                            <a href="index.html#projets">
+                                Projets
+                            </a>
+                        </li>
+                        <li>
+                            <a href="qui_suis-je.html">
+                                Qui suis-je ?
+                            </a>
+                        </li>
+                        <!--<li><a href="contact.html">Contact</a></li>-->
+                    </ul>
+                </div>
             </div>
-              <div class="hamburger-lines">
-                <span class="line line1"></span>
-                <span class="line line2"></span>
-                <span class="line line3"></span>
-              </div>  
-            <div class="menu-items">
-              <li><a href="index.html">Accueil</a></li>
-              <li><a href="index.html#projets">Projets</a></li>
-              <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-              <!--<li><a href="contact.html">Contact</a></li>-->
-              <li><a href="../data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="nav_btn-cv">CV</button></a></li>
-              <li><a href="https://www.behance.net/mthillayisnard"><button class="nav_btn-lkdn"><img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn"></button></a></li>
-              <li><a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="nav_btn-bhnc"><img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc"></button></a></li>
-            </div>
-          </div>
         </div>
-      </nav>
+    </nav>
       <footer>
         <a href="../cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
         <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
