--- a/m/leria.html
+++ b/m/leria.html
@@ -21,17 +21,49 @@
         <nav>
             <div class="navbar">
                 <div class="container nav-container">
-                    <input class="checkbox" type="checkbox" name="" id="" />
+                    <input class="checkbox" type="checkbox" name="nav_checkbox" id="nav-checkbox" />
+                    <div class="logo">
+                        <div class="showed-links-nav">
+                            <a href="../cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank">
+                                <button class="btn-cv">
+                                    Mon CV
+                                </button>
+                            </a>
+                            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" aria-label="Lien vers la page Linkedin">
+                                <button class="btn-linkedin">
+                                    <!--<img src="../data/imgs/all/logo-behance.png" alt="logo de behnace" class="nav_logo-bhnc">-->
+                                </button>
+                            </a>
+                            <a href="https://www.behance.net/mthillayisnard" aria-label="Lien vers la page Behance">
+                                <button class="btn-behance">
+                                    <!--<img src="../data/imgs/all/logo-linkedin.png" alt="logo de linkedin" class="nav_logo-lkdn">-->
+                                </button>
+                            </a>
+                        </div>
+                    </div>
                     <div class="hamburger-lines">
-                        <span class="line line1"></span>
-                        <span class="line line2"></span>
-                        <span class="line line3"></span>
+                        <p class="menu-txt">menu</p>
                     </div>
                     <div class="menu-items">
-                        <li><a href="index.html">Accueil</a></li>
-                        <li><a href="index.html#projets">Projets</a></li>
-                        <li><a href="qui_suis-je.html">Qui suis-je ?</a></li>
-                        <!--<li><a href="contact.html">Contact</a></li>-->
+                        <ul>
+
+                            <li>
+                                <a href="index.html">
+                                    Accueil
+                                </a>
+                            </li>
+                            <li>
+                                <a href="index.html#projets">
+                                    Projets
+                                </a>
+                            </li>
+                            <li>
+                                <a href="qui_suis-je.html">
+                                    Qui suis-je ?
+                                </a>
+                            </li>
+                            <!--<li><a href="contact.html">Contact</a></li>-->
+                        </ul>
                     </div>
                 </div>
             </div>
