--- a/leria.html
+++ b/leria.html
@@ -27,19 +27,22 @@
         </nav>
 
         <div class="header">
+            <div class="box-top-header">
+                <p class="p2-header">
+                    Cr&#233;ation de site Web
+                </p>
+            </div>
             <div class="box-header-bot">
                 <h1 class="Leria">
                     Leria
                 </h1>
             </div>
-            <div class="box-top-header">
-                <p class="p2-header">
-                    Le projet de cr&#233;ation de site
-                </p>
-            </div>
             <div>
-                <button class="btn_decouvrir_site" onclick="window.location.href='http://leria-insurance.com/;'">
-                    D&#233;couvrir le site
+                <button class="btn_header" onclick="window.location.href='portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf';">
+                    Portfolio
+                </button>
+                <button class="btn_header" onclick="window.location.href='http://leria-insurance.com/';">
+                    Site Web
                 </button>
             </div>
         </div>
