--- a/leria.html
+++ b/leria.html
@@ -46,40 +46,26 @@
                 </button>
             </div>
         </div>
-        <table class="t1">
-            <tr>
-                <th class="title-table1">
-                    r&#233;sum&#233;/brief
-
-                </th>
-                <th class="title-table2">
-                    &eacute;quipe
-
-                </th>
-                <th class="title-table3">
-                    logiciels
-
-                </th>
-            </tr>
-            <tr>
-                <td>
-                    J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
+        <div class="description">
+            <p>
+                <b>r&#233;sum&#233;/brief</b>
+                <br/>
+                J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
                 lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
-                </td>
-                <td class="td-mid">
-                    J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
-                </td>
-                <td>
-                    Wordpress
-                    <br>
-                    Evolvetree
-                    <br>
-                    Miro
-                    <br>
-                    Word
-                </td>
-            </tr>
-        </table>
+                <br/>
+                <br/>
+
+                <b>&eacute;quipe</b>
+                <br/>
+                J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
+                <br/>
+                <br/>
+
+                <b>logiciels</b>
+                <br/>
+                Wordpress, Evolvetree, Miro, Word
+            </p>
+        </div>
     </div>
     <img src="data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
