--- a/leria.html
+++ b/leria.html
@@ -19,11 +19,7 @@
 <body>
     <div class="header-background">
         <nav>
-            <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
-            <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
-            <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-            <!--<a href=""><button class="nav-btn-txt">Mon offre</button></a>-->
-            <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
+            <include src="nav.html">
         </nav>
 
         <div class="header">
