--- a/leria.html
+++ b/leria.html
@@ -14,12 +14,13 @@
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
     <script src="data/js/device-redirect-computer.js"></script>
+    <script src="data/js/nav-import.js"></script>
+    <script src="data/js/footer-import.js"></script>
 </head>
 
 <body>
     <div class="header-background">
-        <nav>
-            <include src="nav.html">
+        <nav id="nav">
         </nav>
 
         <div class="header">
