--- a/leria.html
+++ b/leria.html
@@ -20,7 +20,12 @@
 
 <body>
     <div class="header-background">
-        <nav id="nav">
+        <nav>
+            <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="index.html#projets"><button class="nav-btn-txt">Portfolio</button></a>
+            <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <!--<a href=""><button class="nav-btn-txt">Mon offre</button></a>-->
+            <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
         </nav>
 
         <div class="header">
@@ -63,6 +68,9 @@
                 Wordpress, Evolvetree, Miro, Word
             </p>
         </div>
+    </div>
+    <div class="gradiant-sub-header">
+
     </div>
     <img src="data/imgs/leria/LERIA-eolienne.jpg" alt="Illustration d'une &eacute;olienne" class="img-eolienne">
     <div class="background-white">
