--- a/index.html
+++ b/index.html
@@ -69,25 +69,6 @@
 
         <div class="container-projects-cards">
             <div class="box-card">
-                <a href="leria.html">
-                    <img src="data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
-                </a>
-                <h3 class="project-title">Leria</h3>
-                <p class="project-subtitle">Création Web</p>
-                <div class="container-btn-projects-cards">
-                    <a href="leria.html">
-                        <button class="projects-buttons-left">
-                            D&eacute;couvrir le projet
-                        </button>
-                    </a>
-                    <a href="http://leria-insurance.com/" target="_blank">
-                        <button class="projects-buttons-right">
-                            Site Web
-                        </button>
-                    </a>
-                </div>
-            </div>
-            <div class="box-card">
                 <a href="l'acoste.html">
                     <img src="data/imgs/index/l'acoste.jpg" alt="Image d'illustration du projet L’ACOSTE." class="project-img">
                 </a>
@@ -107,39 +88,58 @@
                 </div>
             </div>
             <div class="box-card">
-                <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389">
-                    <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                <a href="chatbot-AI.html">
+                    <img src="data/imgs/index/chatbot-AI.jpg" alt="Image d'illustration du projet ChatBot AI." class="project-img">
                 </a>
-                <h3 class="project-title">GFA Funding</h3>
-                <p class="project-subtitle">Création d’identité</p>
+                <h3 class="project-title">ChatBot AI</h3>
+                <p class="project-subtitle">Maquettage</p>
                 <div class="container-btn-projects-cards">
-                <a href="gfa.html">
+                    <a href="chatbot-AI.html">
                         <button class="projects-buttons-left">
                             D&eacute;couvrir le projet
                         </button>
-                </a>
-                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
+                    </a>
+                    <a href="" target="_blank">
                         <button class="projects-buttons-right">
-                            Behance
+                            Site Web
                         </button>
                     </a>
                 </div>
             </div>
             <div class="box-card">
-                <a href="bouygues_telecom.html">
-                    <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                <a href="EDDL.html">
+                    <img src="data/imgs/index/EDDL.jpg" alt="Image d'illustration du projet EDDL design." class="project-img">
                 </a>
-                <h3 class="project-title">Bouygues Telecom</h3>
-                <p class="project-subtitle">Proposition de solution</p>
+                <h3 class="project-title">EDDL Design</h3>
+                <p class="project-subtitle">Création Web</p>
                 <div class="container-btn-projects-cards">
-                    <a href="bouygues_telecom.html">
+                    <a href="EDDL.html">
                         <button class="projects-buttons-left">
                             D&eacute;couvrir le projet
                         </button>
                     </a>
-                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
+                    <a href="" target="_blank">
                         <button class="projects-buttons-right">
-                            Behance
+                            Site Web
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="leria.html">
+                    <img src="data/imgs/index/leria.jpg" alt="Image d'illustration du projet Leria." class="project-img">
+                </a>
+                <h3 class="project-title">Leria</h3>
+                <p class="project-subtitle">Création Web</p>
+                <div class="container-btn-projects-cards">
+                    <a href="leria.html">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
+                        </button>
+                    </a>
+                    <a href="http://leria-insurance.com/" target="_blank">
+                        <button class="projects-buttons-right">
+                            Site Web
                         </button>
                     </a>
                 </div>
@@ -164,6 +164,25 @@
                 </div>
             </div>
             <div class="box-card">
+                <a href="bouygues_telecom.html">
+                    <img src="data/imgs/index/bouygues-telecom.jpg" alt="Image d'illustration du projet Bouygues Telecom." class="project-img">
+                </a>
+                <h3 class="project-title">Bouygues Telecom</h3>
+                <p class="project-subtitle">Proposition de solution</p>
+                <div class="container-btn-projects-cards">
+                    <a href="bouygues_telecom.html">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
+                        </button>
+                    </a>
+                    <a href="https://www.behance.net/gallery/170664469/Le-mobile-reconditionn-Bouygues-Telecom/modules/962947031" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
                 <a href="https://autopanneassur.fr">
                     <img src="data/imgs/index/autopanneassur.jpg" alt="Image d'illustration du projet AutoPanneAssur." class="project-img">
                 </a>
@@ -178,6 +197,25 @@
                     <a href="https://autopanneassur.fr/" target="_blank">
                         <button class="projects-buttons-right">
                             Site Web
+                        </button>
+                    </a>
+                </div>
+            </div>
+            <div class="box-card">
+                <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389">
+                    <img src="data/imgs/index/gfa.jpg" alt="Image d'illustration du projet GFA Funding." class="project-img">
+                </a>
+                <h3 class="project-title">GFA Funding</h3>
+                <p class="project-subtitle">Création d’identité</p>
+                <div class="container-btn-projects-cards">
+                <a href="gfa.html">
+                        <button class="projects-buttons-left">
+                            D&eacute;couvrir le projet
+                        </button>
+                </a>
+                    <a href="https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit/modules/960526389" target="_blank">
+                        <button class="projects-buttons-right">
+                            Behance
                         </button>
                     </a>
                 </div>
