--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
         </div>
     </div>
     <div class="f-project">
-        <div class="box-h2projet">
-            <div class="box-mes">
-                <p class="txt-mes">mes</p>
-            </div>
-            <h2 class="projets" id="projets">
-                projets
+        <div class="box-h2-subH2">
+            <h2 class="h2projets" id="projets">
+                Mes projets
             </h2>
+            <p>Avec ce portfolio, je vous invite &agrave; rentrer dans ma t&ecirc;te et &agrave; d&eacute;couvrir certains de mes projets à travers mon regard et ma méthodologie.</p>
         </div>
 
         <div class="container-projects-cards">
@@ -220,6 +218,20 @@
                     </a>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="contact-band">
+        <div class="email">
+            <img src="data/imgs/all/email.svg" alt="">
+            <p>manon.thillay@gmail.com</p>
+        </div>
+        <div class="phone">
+            <img src="data/imgs/all/phone.svg" alt="">
+            <p>06 15 62 91 71</p>
+        </div>
+        <div class="adress">
+            <img src="data/imgs/all/adress.svg" alt="">
+            <p>92500 - Rueil-Malmaison</p>
         </div>
     </div>
     <footer>
