--- a/bouygues_telecom.html
+++ b/bouygues_telecom.html
@@ -283,6 +283,20 @@
 
     </div>
     <footer>
+        <div class="contact-band">
+            <div class="email">
+                <img src="data/imgs/all/email.svg" alt="">
+                <p>manon.thillay@gmail.com</p>
+            </div>
+            <div class="phone">
+                <img src="data/imgs/all/phone.svg" alt="">
+                <p>06 15 62 91 71</p>
+            </div>
+            <div class="adress">
+                <img src="data/imgs/all/adress.svg" alt="">
+                <p>92500 - Rueil-Malmaison</p>
+            </div>
+        </div>
         <a href="cv/CV_UX_UI%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon CV</button></a><br/>
         <a href="portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf" target="_blank"><button class="btn-cv-footer">T&eacute;l&eacute;charger mon Portfolio</button></a>
         <p class="p-footer">@mthillayisnard
@@ -292,5 +306,4 @@
         <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><img src="data/imgs/all/logo-linkedin.png" class="img-footer"></a>
     </footer>
 </body>
-
 </html>
