--- a/leria.html
+++ b/leria.html
@@ -29,6 +29,7 @@
         </nav>
 
         <div class="header">
+            
             <div class="box-top-header">
                 <p class="p2-header">
                     Cr&#233;ation de site Web
@@ -52,14 +53,7 @@
             <p>
                 <b>r&#233;sum&#233;/brief</b>
                 <br/>
-                J&#8217;ai d&#251; accompagner la cr&#233;ation d&#8217;une filiale et les ai soutenus
-                lors de la conception de leur site web en collaborant pour d&eacute; la meilleure façon de pr&eacute; l'ensemble.
-                <br/>
-                <br/>
-
-                <b>&eacute;quipe</b>
-                <br/>
-                J&#8217;ai accompagn&#233; seule une &#233;quipe de 3 juristes lors de ce projet.
+                LERIA propose une solution d'assurance de qualité pour faciliter le développement et le financement de projets soumis à des litiges. Mon objectif était la création d'un site vitrine pour partager leur offre spécialisée dans le domaine des risques légaux.
                 <br/>
                 <br/>
 
