--- a/leria.html
+++ b/leria.html
@@ -27,40 +27,45 @@
             <!--<a href=""><button class="nav-btn-txt">Mon offre</button></a>-->
             <!--<a href="contact.html"><button class="nav-btn-txt">Contact</button></a>-->
         </nav>
-
-        <div class="header">
-            
-            <div class="box-top-header">
-                <p class="p2-header">
-                    Cr&#233;ation de site Web
-                </p>
+        <div class="header-division">
+            <div class="left-header">
+                <div class="header">
+                    <div class="box-top-header">
+                        <p class="p2-header">
+                            Cr&#233;ation de site Web
+                        </p>
+                    </div>
+                    <div class="box-header-bot">
+                        <h1 class="Leria">
+                            Leria
+                        </h1>
+                    </div>
+                    <div>
+                        <button class="btn_header" onclick="window.location.href='portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf';">
+                            Portfolio
+                        </button>
+                        <button class="btn_header" onclick="window.location.href='http://leria-insurance.com/';">
+                            Site Web
+                        </button>
+                    </div>
+                </div>
+                <div class="description">
+                    <p>
+                        <b>r&#233;sum&#233;/brief</b>
+                        <br/>
+                        LERIA propose une solution d'assurance de qualité pour faciliter le développement et le financement de projets soumis à des litiges. Mon objectif était la création d'un site vitrine pour partager leur offre spécialisée dans le domaine des risques légaux.
+                        <br/>
+                        <br/>
+        
+                        <b>logiciels</b>
+                        <br/>
+                        Wordpress, Evolvetree, Miro, Word
+                    </p>
+                </div>
             </div>
-            <div class="box-header-bot">
-                <h1 class="Leria">
-                    Leria
-                </h1>
+            <div class="right-header">
+                <img src="data/imgs/leria/Hero_LERIA-MTI.jpg" alt="Hero Leria" class="Hero-img">
             </div>
-            <div>
-                <button class="btn_header" onclick="window.location.href='portfolio/Portfolio%202024%20-%20Manon%20THILLAY-ISNARD.pdf';">
-                    Portfolio
-                </button>
-                <button class="btn_header" onclick="window.location.href='http://leria-insurance.com/';">
-                    Site Web
-                </button>
-            </div>
-        </div>
-        <div class="description">
-            <p>
-                <b>r&#233;sum&#233;/brief</b>
-                <br/>
-                LERIA propose une solution d'assurance de qualité pour faciliter le développement et le financement de projets soumis à des litiges. Mon objectif était la création d'un site vitrine pour partager leur offre spécialisée dans le domaine des risques légaux.
-                <br/>
-                <br/>
-
-                <b>logiciels</b>
-                <br/>
-                Wordpress, Evolvetree, Miro, Word
-            </p>
         </div>
     </div>
     <div class="gradiant-sub-header">
