--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>CV</title>
+    <title>Web Design</title>
 </head>
 <body>
     <div class="div_centre">
@@ -12,8 +12,8 @@
             <div class="div_img_nom_prenom">
                 <img src="PP.png" class="img_PP">
                 <div class="txt_nom_prenom">
-                    <h3>Manon</h3>
-                    <h3 class="h3_nom">Thillay-Isnard</h3>
+                    <h2>Manon</h2>
+                    <h1 class="h1_nom">Thillay-Isnard</h1>
                 </div>
             </div>
             <div>
