--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="card">
             <h2>Mes documents</h2>
             <div class="a_card">
-                <a class="lien" href="cv.mthillayisnard.fr" target="_blank">📝 Consultez mon CV →</a>
-                <a class="lien" href="portfolio.mthillayisnard.fr" target="_blank">🎨 Consultez mon Portfolio →</a>
+                <a class="lien" href="cv" target="_blank">📝 Consultez mon CV →</a>
+                <a class="lien" href="portfolio" target="_blank">🎨 Consultez mon Portfolio →</a>
             </div>
         </div>
     </div>
